<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HorarioSabadoTFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <CheckBox
                android:id="@+id/ts_hora_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@color/transparente"
                android:background="@drawable/radio_selecter"
                android:textAlignment="center"
                android:text="@string/_00_00_am" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/ts_hora_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@color/transparente"
                    android:background="@drawable/radio_selecter"
                    android:textAlignment="center"
                    android:layout_marginTop="2dp"
                    android:text="@string/_01_00_am" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/ts_hora_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@color/transparente"
                    android:background="@drawable/radio_selecter"
                    android:textAlignment="center"
                    android:layout_marginTop="2dp"
                    android:text="@string/_02_00_am" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/ts_hora_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@color/transparente"
                    android:background="@drawable/radio_selecter"
                    android:textAlignment="center"
                    android:layout_marginTop="2dp"
                    android:text="@string/_03_00_am" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/ts_hora_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@color/transparente"
                    android:background="@drawable/radio_selecter"
                    android:textAlignment="center"
                    android:layout_marginTop="2dp"
                    android:text="@string/_04_00_am" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/ts_hora_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@color/transparente"
                    android:background="@drawable/radio_selecter"
                    android:textAlignment="center"
                    android:layout_marginTop="2dp"
                    android:text="@string/_05_00_am" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/ts_hora_6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@color/transparente"
                    android:background="@drawable/radio_selecter"
                    android:textAlignment="center"
                    android:layout_marginTop="2dp"
                    android:text="@string/_06_00_am" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/ts_hora_7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@color/transparente"
                    android:background="@drawable/radio_selecter"
                    android:textAlignment="center"
                    android:layout_marginTop="2dp"
                    android:text="@string/_07_00_am" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/ts_hora_8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@color/transparente"
                    android:background="@drawable/radio_selecter"
                    android:textAlignment="center"
                    android:layout_marginTop="2dp"
                    android:text="@string/_08_00_am" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/ts_hora_9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@color/transparente"
                    android:background="@drawable/radio_selecter"
                    android:textAlignment="center"
                    android:layout_marginTop="2dp"
                    android:text="@string/_09_00_am" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/ts_hora_10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@color/transparente"
                    android:background="@drawable/radio_selecter"
                    android:textAlignment="center"
                    android:layout_marginTop="2dp"
                    android:text="@string/_10_00_am" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/ts_hora_11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@color/transparente"
                    android:background="@drawable/radio_selecter"
                    android:textAlignment="center"
                    android:layout_marginTop="2dp"
                    android:text="@string/_11_00_am" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/ts_hora_12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@color/transparente"
                    android:background="@drawable/radio_selecter"
                    android:textAlignment="center"
                    android:layout_marginTop="2dp"
                    android:text="@string/_12_00_pm" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/ts_hora_13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@color/transparente"
                    android:background="@drawable/radio_selecter"
                    android:textAlignment="center"
                    android:layout_marginTop="2dp"
                    android:text="@string/_01_00_pm" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/ts_hora_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@color/transparente"
                    android:background="@drawable/radio_selecter"
                    android:textAlignment="center"
                    android:layout_marginTop="2dp"
                    android:text="@string/_02_00_pm" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/ts_hora_15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@color/transparente"
                    android:background="@drawable/radio_selecter"
                    android:textAlignment="center"
                    android:layout_marginTop="2dp"
                    android:text="@string/_03_00_pm" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/ts_hora_16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@color/transparente"
                    android:background="@drawable/radio_selecter"
                    android:textAlignment="center"
                    android:layout_marginTop="2dp"
                    android:text="@string/_04_00_pm" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/ts_hora_17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@color/transparente"
                    android:background="@drawable/radio_selecter"
                    android:textAlignment="center"
                    android:layout_marginTop="2dp"
                    android:text="@string/_05_00_pm" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/ts_hora_18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@color/transparente"
                    android:background="@drawable/radio_selecter"
                    android:textAlignment="center"
                    android:layout_marginTop="2dp"
                    android:text="@string/_06_00_pm" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/ts_hora_19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@color/transparente"
                    android:background="@drawable/radio_selecter"
                    android:textAlignment="center"
                    android:layout_marginTop="2dp"
                    android:text="@string/_07_00_pm" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/ts_hora_20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@color/transparente"
                    android:background="@drawable/radio_selecter"
                    android:textAlignment="center"
                    android:layout_marginTop="2dp"
                    android:text="@string/_08_00_pm" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/ts_hora_21"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@color/transparente"
                    android:background="@drawable/radio_selecter"
                    android:textAlignment="center"
                    android:layout_marginTop="2dp"
                    android:text="@string/_09_00_pm" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/ts_hora_22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@color/transparente"
                    android:background="@drawable/radio_selecter"
                    android:textAlignment="center"
                    android:layout_marginTop="2dp"
                    android:text="@string/_10_00_pm" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/ts_hora_23"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:button="@color/transparente"
                    android:background="@drawable/radio_selecter"
                    android:textAlignment="center"
                    android:layout_marginTop="2dp"
                    android:text="@string/_11_00_pm" />
            </LinearLayout>



        </LinearLayout>
    </ScrollView>

</FrameLayout>