<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Activity.Tipo_documento_tutor">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="137dp"
        android:layout_height="40dp"
        android:layout_marginTop="56dp"
        android:text="@string/Tipo_documento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radiotipodedocumento"
        android:layout_width="192dp"
        android:layout_height="149dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <RadioButton
            android:id="@+id/radio_registrocivil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registro_civil" />

        <RadioButton
            android:id="@+id/radio_cedula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Cedula" />

        <RadioButton
            android:id="@+id/radio_pasaporte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Pasaporte" />
    </RadioGroup>

    <Button
        android:id="@+id/aceptar_mensaje"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginTop="132dp"
        android:background="@drawable/boton_pres1"
        android:enabled="false"
        android:text="Aceptar"
        android:textColor="#000"
android:onClick="pasar"
        app:backgroundTint="@color/white"
        app:iconTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiotipodedocumento" />
</androidx.constraintlayout.widget.ConstraintLayout>